--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,5 +4,5 @@ backend:
   branch: master # Branch to update
   site_domain: mrmgee.github.io/green1/ # Your Netlify site address if different from host
 
-  media_folder: "img/uploads" # Media files will be stored in the repo under images/uploads
+  media_folder: "green1/img/uploads" # Media files will be stored in the repo under images/uploads
 
