--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,3 +5,13 @@ backend:
   site_domain: mrmgee.github.io/green1/ # Your Netlify site address if different from host
 
 media_folder: "img/uploads" # Media files will be stored in the repo under images/uploads
+
+collections: # A list of collections the CMS should be able to edit
+  - name: "pages"
+    label: "Pages"
+    files:
+      - file: "site/content/products.md"
+        label: "Products Page"
+        name: "products"
+        fields:
+          - {label: Title, name: title, widget: string}
